fix header image issues on mobile

--- a/css/layout.css
+++ b/css/layout.css
@@ -356,8 +356,8 @@ fieldset[disabled] .btn-theme {
 
 .promo-block .promo-block-img {
   position: absolute;
-  right: 0;
-  bottom: 0;
+  right: 0px;
+  top: -50px;
 }
 
 @media (max-width: 768px) {
